footer ser bra og lik ut på alle sider

--- a/problem.html
+++ b/problem.html
@@ -14,86 +14,88 @@
       <a href="solution.html">Solution</a>
       <a href="prototype.html">Prototype</a>
     </nav>
+    <div class="main">
+      <div class="flex-challenge">
+        <div class="flex-challenge-left">
+          <h2 class="problem-text">The challenge of a global pandemic</h2>
 
-    <div class="flex-challenge">
-      <div class="flex-challenge-left">
-  <h2 class="problem-text">The challenge of a global pandemic</h2>
+          <p class="problem-text"> HowCrowded is working towards handling one
+            of the challenges that comes with the COVID-19
+            pandemic:<br>
+            <i>- Managing to keep distance to other people in
+              order to prevent the disease to spread.</i><br>
+              Today’s global pandemic has taught us many things.
+              It’s made us more aware to wash our hands and perhaps
+              most importantly to keep distance from each other.
+              WHO (n.d.) states that to keep yourself and others
+              safe from COVID-19 it’s important to keep a distance
+              of at least one meter from others, and an even greater
+              distance when one is indoors. The further away, the better.
+              However, it is not always easy to be able to maintain
+              distance to other people. Doing necessary chores such
+              as going to a grocery store can make it difficult to keep
+              distance to the other shoppers if there are too many people
+              there at the same time. This is also a big challenge for
+              indoor spaces that are open to the public. They need
+              regulation to ensure that there are not too many people
+              inside the room at the same time: be it a library, grocery
+              store or a gym.</p><br>
+            </div>
+            <div class="flex-challenge-right">
+              <img src="images/distance.png" alt="" width="500" height="auto">
+            </div>
+          </div>
 
-    <p class="problem-text"> HowCrowded is working towards handling one
-      of the challenges that comes with the COVID-19
-      pandemic:<br>
-      <i>- Managing to keep distance to other people in
-      order to prevent the disease to spread.</i><br>
-      Today’s global pandemic has taught us many things.
-      It’s made us more aware to wash our hands and perhaps
-      most importantly to keep distance from each other.
-      WHO (n.d.) states that to keep yourself and others
-      safe from COVID-19 it’s important to keep a distance
-      of at least one meter from others, and an even greater
-      distance when one is indoors. The further away, the better.
-      However, it is not always easy to be able to maintain
-      distance to other people. Doing necessary chores such
-      as going to a grocery store can make it difficult to keep
-      distance to the other shoppers if there are too many people
-      there at the same time. This is also a big challenge for
-      indoor spaces that are open to the public. They need
-      regulation to ensure that there are not too many people
-      inside the room at the same time: be it a library, grocery
-      store or a gym.</p><br>
-</div>
-<div class="flex-challenge-right">
-<img src="images/distance.png" alt="" width="500" height="auto">
-</div>
-</div>
-
-<div class="flex-pro">
- <div class="flex-leftpro">
- <img src="images/maximum.png" alt="" width="470" height="auto">
-  </div>
-  <div class="flex-rightpro">
-    <h2 class="problem-text">The challenge illustrated</h2>
-    <p class="problem-text">These days many stores and other public spaces have a display
-      of how many people are allowed into the store, occasionally
-      accompanied by member of staff that checks the numbers.
-      However, this is often only displayed by a simple note outside.
-      For example for bigger grocery stores where the number might be
-      up to 50 people it is difficult to see how many people are actually
-      in the store. This put both the customer and the organization’s
-      staff at risk of having too many people inside the same space
-      at the same time.</p>
-  </div>
-</div>
-    <div class="problem-text">
-      <h2>Ensure healthy lives and promote well being for all
-      at all ages</h2>
-      <img src="images/goal.png" alt="Goal number 3" width="200" height="auto" class="text-wrap-left">
-      <p>HowCrowded’s work is inspired by the UN’s sustainable goal number 3:
-      <br><b><i>Ensuring healthy lives and promote well-being for all at all ages.</i></b><br>
-      The UN reports that the implications from the pandemic could potentially
-      set back decades of improvement in healthcare and they are expecting hundred
-      of thousands additional under-5 deaths (UN, n.d.).
-      Already, childhood immunization programmes in around 70 countries have been
-      interrupted (UN, n.d.). With other words, the pandemic is  threatening
-      the health outcomes and could cause massive setbacks to the overall health
-      services provided in the world.
-      The UN(n.d.) calls out for comprehensive health strategies and increased
-      spending on health systems.</p>
-    </div>
-    <img class="center" src="images/unitednations.png" alt="" width="1000" height="auto">
-  </div>
-
-
-  <footer id="footer">
-    <h2>Made by:</h2>
-    <br>
-    <div id="moreFooter">
-      <h5 id="contributor">Me</h6>
-      <h5 id="contributor">You</h6>
-      <h5 id="contributor">And You</h6>
-    </div>
-    <br>
-    <a id="resources" href="resources.html">Our resources</a>
-    <br><br>
-  </footer>
-</body>
-</html>
+          <div class="flex-pro">
+            <div class="flex-leftpro">
+              <img src="images/maximum.png" alt="" width="470" height="auto">
+            </div>
+            <div class="flex-rightpro">
+              <h2 class="problem-text">The challenge illustrated</h2>
+              <p class="problem-text">These days many stores and other public spaces have a display
+                of how many people are allowed into the store, occasionally
+                accompanied by member of staff that checks the numbers.
+                However, this is often only displayed by a simple note outside.
+                For example for bigger grocery stores where the number might be
+                up to 50 people it is difficult to see how many people are actually
+                in the store. This put both the customer and the organization’s
+                staff at risk of having too many people inside the same space
+                at the same time.</p>
+              </div>
+            </div>
+            <div class="problem-text">
+              <h2>Ensure healthy lives and promote well being for all
+                at all ages</h2>
+                <img src="images/goal.png" alt="Goal number 3" width="200" height="auto" class="text-wrap-left">
+                <p>HowCrowded’s work is inspired by the UN’s sustainable goal number 3:
+                  <br><b><i>Ensuring healthy lives and promote well-being for all at all ages.</i></b><br>
+                  The UN reports that the implications from the pandemic could potentially
+                  set back decades of improvement in healthcare and they are expecting hundred
+                  of thousands additional under-5 deaths (UN, n.d.).
+                  Already, childhood immunization programmes in around 70 countries have been
+                  interrupted (UN, n.d.). With other words, the pandemic is  threatening
+                  the health outcomes and could cause massive setbacks to the overall health
+                  services provided in the world.
+                  The UN(n.d.) calls out for comprehensive health strategies and increased
+                  spending on health systems.</p>
+                </div>
+                <img class="center" src="images/unitednations.png" alt="" width="1000" height="auto">
+              </div>
+            </div>
+            <footer id="footer">
+              <h2>Made by:</h2>
+              <div class="fContent">
+                <a id="resources" href="resources.html">Our resources</a>
+                <img src="images/HCicon.png"/>
+                <div id="contributors">
+                  <h5 class="contributor">Ole</h5>
+                  <h5 class="contributor">Zandra</h5>
+                  <h5 class="contributor">Eva</h5>
+                  <h5 class="contributor">Ina</h5>
+                  <h5 class="contributor">Siem</h5>
+                  <h5 class="contributor">Daniel</h5>
+                </div>
+              </div>
+            </footer>
+          </body>
+          </html>
