--- a/solution.html
+++ b/solution.html
@@ -14,89 +14,92 @@
       <a href="solution.html">Solution</a>
       <a href="prototype.html">Prototype</a>
     </nav>
-
-    <div class="topflex-sol">
-      <div class="topflex-solleft">
-        <img src="images/keepdistance.png" alt="" width="600" heigth="auto">
+    <div class="main">
+      <div class="topflex-sol">
+        <div class="topflex-solleft">
+          <img src="images/keepdistance.png" alt="" width="600" heigth="auto">
+        </div>
+        <div class="topflex-solright">
+          <p>Keep distance<br>to care<br>for each other</p>
+        </div>
       </div>
-      <div class="topflex-solright">
-        <p>Keep distance<br>to care<br>for each other</p>
-      </div>
-    </div>
 
-    <div class="solution-text">
-  <h2>A dual solution</h2>
-  <p>HowCrowded provides a dual solution to make it easier
-    both for people and organizations to keep social distance.<br><br>
-    This is achieved by:
-    <ul>
-      <li>Sensors provided to indoor locations accessible by
-        the public such as grocery stores, libraries or gyms.</li>
-      <li>An app/website that the public can use to check both
-        real time how many people are in an indoor location,
-        and also general trends so they can plan their visit when
-        there is less crowded.</li>
-      <li>Technology that can be used by organizations
-        to manage information about how many people are in their
-        store at a given time. This can be used for planning and
-        organization as well as setting up a screen at the front door
-        to control the people going in and out.</li>
-      </ul>
-  <br><br>
-  </p>
-</div>
+      <div class="solution-text">
+        <h2>A dual solution</h2>
+        <p>HowCrowded provides a dual solution to make it easier
+          both for people and organizations to keep social distance.<br><br>
+          This is achieved by:
+          <ul>
+            <li>Sensors provided to indoor locations accessible by
+              the public such as grocery stores, libraries or gyms.</li>
+              <li>An app/website that the public can use to check both
+                real time how many people are in an indoor location,
+                and also general trends so they can plan their visit when
+                there is less crowded.</li>
+                <li>Technology that can be used by organizations
+                  to manage information about how many people are in their
+                  store at a given time. This can be used for planning and
+                  organization as well as setting up a screen at the front door
+                  to control the people going in and out.</li>
+                </ul>
+                <br><br>
+              </p>
+            </div>
 
- <div class="flex-so">
- <div class="flex-leftso">
-   <img src="images/consumer.png" alt="consumer" width="auto" height="70">
-   <p class="solution-heading">Consumer</p>
-   <p class="solution-text-white"> This will make it much easier for people to plan their trips to public
-   indoor spaces as they can both check in real-time how many people and
-   see how many people that usually visit at given times.</p>
-   </div>
+            <div class="flex-so">
+              <div class="flex-leftso">
+                <img src="images/consumer.png" alt="consumer" width="auto" height="70">
+                <p class="solution-heading">Consumer</p>
+                <p class="solution-text-white"> This will make it much easier for people to plan their trips to public
+                  indoor spaces as they can both check in real-time how many people and
+                  see how many people that usually visit at given times.</p>
+                </div>
 
-   <div class="flex-rightso">
-     <img src="images/business.png" alt="organization" width="auto" height="70">
-     <p class="solution-heading"> Organization
-    </p>
-   <p class="solution-text-white"> For organizations, they no longer have to count manually how many
-    people are in the location, and for smaller stores this could mean
-    that they will no longer need to use a member of staff to control
-    the door as the customer is told by the screen when it is ready for
-    them to go into the space.</p>
-     </div>
-   </div>
+                <div class="flex-rightso">
+                  <img src="images/business.png" alt="organization" width="auto" height="70">
+                  <p class="solution-heading"> Organization
+                  </p>
+                  <p class="solution-text-white"> For organizations, they no longer have to count manually how many
+                    people are in the location, and for smaller stores this could mean
+                    that they will no longer need to use a member of staff to control
+                    the door as the customer is told by the screen when it is ready for
+                    them to go into the space.</p>
+                  </div>
+                </div>
 
-   <div class="solution-text">
-     <h2>Differentiating us from our competitors</h2>
-     <p>There are similar concepts to the product we are offering.
-       Google for example has a function that shows how busy a place
-       is, and also does forecasts for different times of the day.
-       Furthermore, the technology for using sensors to track people
-       going in and out of a store also exicitis, however the practice
-       of using these are not widespread. However, the genius
-       lies in combining these two services. The stores will better
-       manage the flow of customers, because they give the real time
-       information to them, and the customers will get an accurate
-       number of how many people are in the store at a given time -
-       making it easier for them to plan when they are going to a
-       certain location.</p>
-     </div>
-
-  </div>
+                <div class="solution-text">
+                  <h2>Differentiating us from our competitors</h2>
+                  <p>There are similar concepts to the product we are offering.
+                    Google for example has a function that shows how busy a place
+                    is, and also does forecasts for different times of the day.
+                    Furthermore, the technology for using sensors to track people
+                    going in and out of a store also exicitis, however the practice
+                    of using these are not widespread. However, the genius
+                    lies in combining these two services. The stores will better
+                    manage the flow of customers, because they give the real time
+                    information to them, and the customers will get an accurate
+                    number of how many people are in the store at a given time -
+                    making it easier for them to plan when they are going to a
+                    certain location.</p>
+                  </div>
+                </div>
+              </div>
 
 
-  <footer id="footer">
-    <h2>Made by:</h2>
-    <br>
-    <div id="moreFooter">
-      <h5 id="contributor">Me</h6>
-      <h5 id="contributor">You</h6>
-      <h5 id="contributor">And You</h6>
-    </div>
-    <br>
-    <a id="resources" href="resources.html">Our resources</a>
-    <br><br>
-  </footer>
-</body>
-</html>
+              <footer id="footer">
+                <h2>Made by:</h2>
+                <div class="fContent">
+                  <a id="resources" href="resources.html">Our resources</a>
+                  <img src="images/HCicon.png"/>
+                  <div id="contributors">
+                    <h5 class="contributor">Ole</h5>
+                    <h5 class="contributor">Zandra</h5>
+                    <h5 class="contributor">Eva</h5>
+                    <h5 class="contributor">Ina</h5>
+                    <h5 class="contributor">Siem</h5>
+                    <h5 class="contributor">Daniel</h5>
+                  </div>
+                </div>
+              </footer>
+            </body>
+            </html>
