--- a/resources.html
+++ b/resources.html
@@ -19,7 +19,7 @@
   <div class="content">
     <nav id="navbar">
       <a href="index.html"><img src="images\logo.PNG" /></a>
-      <a href="problem.html">Problem</a>
+      <a href="problem.html">Challenge</a>
       <a href="solution.html">Solution</a>
       <a href="prototype.html">Prototype</a>
     </nav>
@@ -39,7 +39,7 @@
     </div>
     <!--<input id="cssChange" type="checkbox" name="CSS" value="" onchange="changeCSS()">-->
   </div>
-  
+
   <footer id="footer">
     <h2>Made by:</h2>
     <div class="fContent">
