--- a/solution.html
+++ b/solution.html
@@ -10,7 +10,7 @@
   <div class="content">
     <nav id="navbar">
       <a href="index.html"><img src="images\logo.PNG" /></a>
-      <a href="problem.html">Problem</a>
+      <a href="problem.html">Challenge</a>
       <a href="solution.html">Solution</a>
       <a href="prototype.html">Prototype</a>
     </nav>
