la lik mørk farge på alle sidene

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
       </div>
       <a href="#section-challenge"><img id="" class="arrow-down" src="images/arrow-down.svg" alt="Scroll Down"></a>
-      <div id="section-challenge" class="section-challenge">
+      <div id="section-challenge" class="section-challenge darkDiv">
         <div class="section-container">
           <div class="section-content"><br>
             <h2>Challenge</h2><br>
