--- a/problem.html
+++ b/problem.html
@@ -45,7 +45,7 @@
             </div>
           </div>
 
-          <div class="flex-pro">
+          <div class="flex-pro darkDiv">
             <div class="flex-leftpro">
               <img src="images/maximum.png" alt="" width="470" height="auto">
             </div>
