--- a/prototype.html
+++ b/prototype.html
@@ -35,7 +35,7 @@
             <img src="images/prototype/Home_page.png">
         </div>
     </section>
-    <section class="prototype wrapper_dark">
+    <section class="prototype wrapper_dark darkDiv">
         <div class="app_img wrapper_left">
             <img src="images/prototype/2Home_Search.png">
         </div>
@@ -45,7 +45,7 @@
             </p>
         </div>
     </section>
-    <section class="prototype wrapper_dark">
+    <section class="prototype wrapper_dark darkDiv">
         <div class="app_txt wrapper_left">
             <h1>Store Information</h1>
             <p>In a similar manner, an basic component of elements of the overall scores provides benefit from The Verification of Improper Usage" (Adolph Keen in The Book of the Set of Related Commands and Controls) As a matter of fact components of discussions of the basic We must be ready for data management and data architecture framework and continuing estimation doctrine investigation of any visible or various approach. </p>
@@ -83,7 +83,7 @@
             </p>
         </div>
     </section>
-    <section class="prototype wrapper_dark">
+    <section class="prototype wrapper_dark darkDiv">
         <div class="app_txt wrapper_left">
             <h1>Red light</h1>
             <p>In a similar manner, an basic component of elements of the overall scores provides benefit from The Verification of Improper Usage" (Adolph Keen in The Book of the Set of Related Commands and Controls) As a matter of fact components of discussions of the basic We must be ready for data management and data architecture framework and continuing estimation doctrine investigation of any visible or various approach. </p>
@@ -92,7 +92,7 @@
             <img src="images/prototype/red'.png">
         </div>
     </section>
-    
+
 </main>
 
   <footer id="footer">
