--- a/solution.html
+++ b/solution.html
@@ -47,7 +47,7 @@
             </div>
 
             <div class="flex-so">
-              <div class="flex-leftso">
+              <div class="flex-leftso darkDiv">
                 <img src="images/consumer.png" alt="consumer" width="auto" height="70">
                 <p class="solution-heading">Consumer</p>
                 <p class="solution-text-white"> This will make it much easier for people to plan their trips to public
@@ -55,7 +55,7 @@
                   see how many people usually visit at given times.</p>
                 </div>
 
-                <div class="flex-rightso">
+                <div class="flex-rightso darkDiv">
                   <img src="images/business.png" alt="organization" width="auto" height="70">
                   <p class="solution-heading"> Organization
                   </p>
