små rettinger på css til solution

--- a/problem.html
+++ b/problem.html
@@ -65,18 +65,20 @@
             <div class="problem-text">
               <h2>Ensure healthy lives and promote well being for all
                 at all ages</h2>
-                <img src="images/goal.png" alt="Goal number 3" width="200" height="auto" class="text-wrap-left">
-                <p>HowCrowded’s work is inspired by the UN’s sustainable goal number 3:
-                  <br><b><i>Ensuring healthy lives and promote well-being for all at all ages.</i></b><br>
-                  The UN reports that the implications from the pandemic could potentially
-                  set back decades of improvement in healthcare and they are expecting hundred
-                  of thousands additional under-5 deaths (UN, n.d.).
-                  Already, childhood immunization programmes in around 70 countries have been
-                  interrupted (UN, n.d.). With other words, the pandemic is  threatening
-                  the health outcomes and could cause massive setbacks to the overall health
-                  services provided in the world.
-                  The UN(n.d.) calls out for comprehensive health strategies and increased
-                  spending on health systems.</p>
+                <div class="twoColumns">
+                  <img src="images/goal.png" alt="Goal number 3" class="text-wrap-left">
+                  <p>HowCrowded’s work is inspired by the UN’s sustainable goal number 3:
+                    <br><b><i>Ensuring healthy lives and promote well-being for all at all ages.</i></b><br>
+                    The UN reports that the implications from the pandemic could potentially
+                    set back decades of improvement in healthcare and they are expecting hundred
+                    of thousands additional under-5 deaths (UN, n.d.).
+                    Already, childhood immunization programmes in around 70 countries have been
+                    interrupted (UN, n.d.). With other words, the pandemic is  threatening
+                    the health outcomes and could cause massive setbacks to the overall health
+                    services provided in the world.
+                    The UN(n.d.) calls out for comprehensive health strategies and increased
+                    spending on health systems.</p>
+                </div>
                 </div>
                 <img class="center" src="images/unitednations.png" alt="" width="1000" height="auto">
               </div>
