--- a/prototype.html
+++ b/prototype.html
@@ -74,7 +74,7 @@
         </div>
     </section>
     <section class="prototype wrapper_dark darkDiv">
-        <div class="app_img wrapper_left">
+        <div class="app_img_tablet wrapper_left">
             <img src="images/prototype/Green.png">
         </div>
         <div class="app_txt wrapper_right">
@@ -88,7 +88,7 @@
             <h1>Red light</h1>
             <p>In a similar manner, an basic component of elements of the overall scores provides benefit from The Verification of Improper Usage" (Adolph Keen in The Book of the Set of Related Commands and Controls) As a matter of fact components of discussions of the basic We must be ready for data management and data architecture framework and continuing estimation doctrine investigation of any visible or various approach. </p>
         </div>
-        <div class="app_img wrapper_right">
+        <div class="app_img_tablet wrapper_right">
             <img src="images/prototype/red'.png">
         </div>
     </section>
