--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
       <a href="prototype.html">Prototype</a>
     </nav>
     <div class="main">
+      <a href="https://www.un.org/sustainabledevelopment/health/"><img id="sustainable-goal3" class="images" src="images/goal_3.png" alt="Sustainable Goal 3: Good health and well-being"></a>
       <div class="intro">
-        <img id="distancing" class="images" src="images/forsidebilde.png" alt="Social distancing" height="auto" width="700">
+        <img id="distancing" class="images" src="images/forsidebilde.png" alt="Illustration of social distancing">
         <div class="primary-heading">
           <h1>Makes social distancing easier</h1>
         </div>
       </div>
-      <a href="#section-challenge"><img id="" class="arrow-down" src="images/arrow-down.svg" alt="Scroll Down"></a>
+      <div class="scroll-down"></img><a>Scroll down</a><a href="#section-challenge"><img id="arrow-down" src="images/arrow-down.png" alt="Scroll Down"></a>
+      </div>
+
       <div id="section-challenge" class="section-challenge darkDiv">
         <div class="section-container">
           <div class="section-content"><br>
