startet litt på tekst på prototypesiden, men mangler litt under 'more', 'green light' og 'red light'

--- a/prototype.html
+++ b/prototype.html
@@ -23,13 +23,19 @@
                 <img src="images/prototype/Bilde2.png" title="">
             </div>
             <h1 class="divices_txt">
-                In spite of the fact that the explicit examination of task analysis cannot rely only on the software functionality.<br>
+                The HowCrowded app makes it easier to practice social distancing in public, indoor spaces<br>
             </h1>
     </div>
     <section class="prototype wrapper_light">
         <div class="app_txt wrapper_left">
-            <h1>The Homepage</h1>
-            <p>In a similar manner, an basic component of elements of the overall scores provides benefit from The Verification of Improper Usage" (Adolph Keen in The Book of the Set of Related Commands and Controls) As a matter of fact components of discussions of the basic reason of the primary element seems to be suitable for the closely developed techniques. We must be ready for data management and data architecture framework and continuing estimation doctrine investigation of any visible or various approach. </p>
+            <h1>The homepage</h1>
+            <p>
+                When opening the app, you have multiple ways to choose the public place you want
+                information about.
+                <br>
+                You could either choose a category, and the app will provide related places, or you could use the search function.
+                You will also have the possibility to save your favourite places for future use.
+            </p>
         </div>
         <div class="app_img wrapper_right">
             <img src="images/prototype/Home_page.png">
@@ -40,15 +46,25 @@
             <img src="images/prototype/2Home_Search.png">
         </div>
         <div class="app_txt wrapper_right">
-            <h1>Search for Store</h1>
-            <p>In a similar manner, an basic component of elements of the overall scores provides benefit from The Verification of Improper Usage" (Adolph Keen in The Book of the Set of Related Commands and Controls) As a matter of fact components of discussions of the basic reason of the primary element seems to be suitable for the closely developed techniques.
+            <h1>Search for a public place</h1>
+            <p>
+                If you already know the name of the place that you want to visit,
+                you can use the search function to find the place.
+                When searching for a place, the app will tell you if there are similar places nearby,
+                making it easier choosing a place less crowded.
             </p>
         </div>
     </section>
     <section class="prototype wrapper_dark darkDiv">
         <div class="app_txt wrapper_left">
-            <h1>Store Information</h1>
-            <p>In a similar manner, an basic component of elements of the overall scores provides benefit from The Verification of Improper Usage" (Adolph Keen in The Book of the Set of Related Commands and Controls) As a matter of fact components of discussions of the basic We must be ready for data management and data architecture framework and continuing estimation doctrine investigation of any visible or various approach. </p>
+            <h1>Public place information</h1>
+            <p>
+                When you've chosen a specific place, the app will provide the total capacity
+                of the place, as well as the number of people there in real time.
+                You will also be able to see a graph of popular times for the place, in order to plan your trip.
+                <br>
+                The app will also provide additional information, such as the address and opening hours.
+            </p>
         </div>
         <div class="app_img wrapper_right">
             <img src="images/prototype/3Home_Store_INFO.png">
@@ -60,14 +76,16 @@
         </div>
         <div class="app_txt wrapper_right">
             <h1>Add your store</h1>
-            <p>In a similar manner, an basic component of elements of the overall scores provides benefit from The Verification of Improper Usage" (Adolph Keen in The Book of the Set of Related Commands and Controls) As a matter of fact components of discussions of the basic reason of the primary element seems to be suitable for the closely developed techniques.
+            <p>
+                For quicker access to information, you will be able to save a place, for instance your nearby store, to "My stores".
+                You will get a list over your favourite places with the capacity, gathered in one page.
             </p>
         </div>
     </section>
     <section class="prototype wrapper_light">
         <div class="app_txt wrapper_left">
             <h1>More</h1>
-            <p>In a similar manner, an basic component of elements of the overall scores provides benefit from The Verification of Improper Usage" (Adolph Keen in The Book of the Set of Related Commands and Controls) As a matter of fact components of discussions of the basic We must be ready for data management and data architecture framework and continuing estimation doctrine investigation of any visible or various approach. </p>
+            <p></p>
         </div>
         <div class="app_img wrapper_right">
             <img src="images/prototype/5More.png">
@@ -79,7 +97,8 @@
         </div>
         <div class="app_txt wrapper_right">
             <h1>Green light</h1>
-            <p>In a similar manner, an basic component of elements of the overall scores provides benefit from The Verification of Improper Usage" (Adolph Keen in The Book of the Set of Related Commands and Controls) As a matter of fact components of discussions of the basic reason of the primary element seems to be suitable for the closely developed techniques.
+            <p>
+
             </p>
         </div>
     </section>
