--- a/problem.html
+++ b/problem.html
@@ -63,10 +63,14 @@
               </div>
             </div>
             <div class="problem-text">
-              <h2>Ensure healthy lives and promote well being for all
-                at all ages</h2>
+
                 <div class="twoColumns">
-                  <img src="images/goal.png" alt="Goal number 3" class="text-wrap-left">
+                  <div class="twoColumns-left">
+                  <img src="images/goal.png" alt="Goal number 3" width="300" height="auto">
+                </div>
+                <div class="twoColumns-right">
+                  <h2>Ensure healthy lives and promote well being for all
+                    at all ages</h2>
                   <p>HowCrowded’s work is inspired by the UN’s sustainable goal number 3:
                     <br><b><i>Ensuring healthy lives and promote well-being for all at all ages.</i></b><br>
                     The UN reports that the implications from the pandemic could potentially
@@ -78,6 +82,7 @@
                     services provided in the world.
                     The UN(n.d.) calls out for comprehensive health strategies and increased
                     spending on health systems.</p>
+                  </div>
                 </div>
                 </div>
                 <img class="center" src="images/unitednations.png" alt="" width="1000" height="auto">
