--- a/prototype.html
+++ b/prototype.html
@@ -23,23 +23,50 @@
                 <img src="images/prototype/Bilde2.png" title="">
             </div>
             <h1 class="divices_txt">
-                The HowCrowded app makes it easier to practice social distancing in public, indoor spaces<br>
+                The HowCrowded provides a dual solution for people and organizations to make social distancing a breeze.<br>
             </h1>
     </div>
     <section class="prototype wrapper_light">
         <div class="app_txt wrapper_left">
-            <h1>The homepage</h1>
+            <h1>Sensors </h1>
             <p>
-                When opening the app, you have multiple ways to choose the public place you want
-                information about.
+                Sensors are placed at the opening of the locations to register people going in and out.
                 <br>
-                You could either choose a category, and the app will provide related places, or you could use the search function.
-                You will also have the possibility to save your favourite places for future use.
+                This provides real-time information about how many people is in the location at a given time. Addtionally, the numbers can be used for forecasting.
             </p>
         </div>
         <div class="app_img wrapper_right">
-            <img src="images/prototype/Home_page.png">
+            <img src="images/prototype/sensor.png">
         </div>
+    </section>
+    <section class="prototype wrapper_light">
+        <div class="app_txt wrapper_right">
+            <h1> Signs at entrance </h1>
+            <p>
+                The service can be used by organization to use a screen sign at the entrance
+                <br>
+                The screen is bright green when one can enter, and red when the visitor has to wait.
+            </p>
+        </div>
+        <div class="app_img wrapper_left">
+            <img src="images/prototype/green.png">
+        </div>
+    </section>
+    <section class="prototype wrapper_dark darkDiv">
+      <h1 class="divices_txt"> The App Explained </h1>
+      <div class="app_txt wrapper_left">
+          <h1>The homepage</h1>
+          <p>
+              When opening the app, you have multiple ways to choose the public place you want
+              information about.
+              <br>
+              You could either choose a category, and the app will provide related places, or you could use the search function.
+              You will also have the possibility to save your favourite places for future use.
+          </p>
+      </div>
+      <div class="app_img wrapper_right">
+          <img src="images/prototype/Home_page.png">
+      </div>
     </section>
     <section class="prototype wrapper_dark darkDiv">
         <div class="app_img wrapper_left">
@@ -71,11 +98,12 @@
         </div>
     </section>
     <section class="prototype wrapper_light">
+      <h1 class="divices_txt"> Other App Features </h1>
         <div class="app_img wrapper_left">
             <img class="app_img" src="images/prototype/4My%20Stores.png">
         </div>
         <div class="app_txt wrapper_right">
-            <h1>Add your store</h1>
+            <h1>Add your favorite store</h1>
             <p>
                 For quicker access to information, you will be able to save a place, for instance your nearby store, to "My stores".
                 You will get a list over your favourite places with the capacity, gathered in one page.
@@ -84,31 +112,11 @@
     </section>
     <section class="prototype wrapper_light">
         <div class="app_txt wrapper_left">
-            <h1>More</h1>
-            <p></p>
+            <h1>Privacy, settings and more</h1>
+            <p> The App provides an easy way to change to your preferred settings</p>
         </div>
         <div class="app_img wrapper_right">
             <img src="images/prototype/5More.png">
-        </div>
-    </section>
-    <section class="prototype wrapper_dark darkDiv">
-        <div class="app_img_tablet wrapper_left">
-            <img src="images/prototype/Green.png">
-        </div>
-        <div class="app_txt wrapper_right">
-            <h1>Green light</h1>
-            <p>
-
-            </p>
-        </div>
-    </section>
-    <section class="prototype wrapper_dark darkDiv">
-        <div class="app_txt wrapper_left">
-            <h1>Red light</h1>
-            <p>In a similar manner, an basic component of elements of the overall scores provides benefit from The Verification of Improper Usage" (Adolph Keen in The Book of the Set of Related Commands and Controls) As a matter of fact components of discussions of the basic We must be ready for data management and data architecture framework and continuing estimation doctrine investigation of any visible or various approach. </p>
-        </div>
-        <div class="app_img_tablet wrapper_right">
-            <img src="images/prototype/red'.png">
         </div>
     </section>
 
